@@ -50,7 +50,7 @@ public class ReplaceRunners extends Recipe {
     @Override
     public TreeVisitor<?, ExecutionContext> getVisitor() {
         return Preconditions.check(new FindSourceFiles(".github/workflows/*.yml"),
-                new ChangeValue(String.format("$.jobs.%s.runs-on", jobName), Arrays.toString(runners.toArray()))
+                new ChangeValue("$.jobs.%s.runs-on".formatted(jobName), Arrays.toString(runners.toArray()))
                         .getVisitor());
     }
 }
